Cantidad de pistas por parámetro
- Agregada la opción de indicar la cantidad de pistas por argumento al ejecutable
- Corrección a estadística de ocio
- Versión de JDK para compilación cambiada a 11